# Reformulation-Flask

./: .env.example  .gitignore  .replit  Pasted--title-Anthropic-Manifold-Pipeline-author-justinh-rahb-sriparashiva-date-2024-06-20-version--1730306206208.txt  Pasted--title-Google-GenAI-Vertex-AI-Manifold-Pipeline-author-Hiromasa-Kakehashi-date-2024-09-19-ve-1730306189269.txt  Pasted-Error-loading-ollama-models-Error-Error-checking-status-SyntaxError-Error-loading-groq-m-1730356457654.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-Reformulation-Flask-pythonlibs-lib-python3--1730301998062.txt  Pasted-from-typing-import-List-Union-Generator-Iterator-from-schemas-import-OpenAIChatMessage-from-pydan-1730306148161.txt  README.md  app.py  backup_corrections.json  backup_data.py  backup_preferences.example.json  config.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt
instance/: preferences.db  reformulator.db
migrations/: env.py
migrations/versions/: 0d7d75428d76_add_syntax_rules_column_to_user_.py  16cd173acaf6_.py  add_huggingface_and_emoji_options.py  add_missing_columns.py  add_reformulation_preferences.py  add_reformulation_preferences_column.py  add_reformulation_prefs.py  add_translation_correction_history.py  e2b61f4dc40b_add_correction_prompt.py  initial_migration.py  merge_heads.py  update_database_structure.py
static/: manifest.json  sw.js
static/css/: style.css
static/js/: correction.js  email.js  main.js  (+7 more)
templates/: base.html  index.html  prompt_modal.html  settings_modal.html  translation_modal.html
(+4 files in other folders)
