[project]
name = "repl-nix-flaskcolorappclone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.7",
    "anthropic>=0.7.7",
    "google-generativeai>=0.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]
